--- a/frontend/src/styles/TaskList.css
+++ b/frontend/src/styles/TaskList.css
@@ -417,6 +417,11 @@
     display:none;
   }
 
+    .tl-table{
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+
 }
 
 .tl-openBtn.is-disabled,
